# TAED2-2526q1-gced-upc-demos

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dvc.yaml  pyproject.toml
.dvc/: config
docs/: codecarbon-demo.md  dvc-demo.md  fastapi-demo.md  git-demo.md  great-expectations-demo.md  mlflow-demo.md  project-setup.md  pytest-demo.md
docs/deployment/: 01_deploy_general.md  02_deploy_fib.md  README.md
gx/: great_expectations.yml
gx/checkpoints/: validation_checkpoint.json
gx/data_docs/: index.html
gx/data_docs/expectations/: data_quality_validation.html
gx/data_docs/validations/data_quality_validation/__none__/20250512T182402.354049Z/: pandas-clean_imdb_reviews.html  pandas-raw_imdb_reviews.html
gx/data_docs/validations/data_quality_validation/__none__/20250512T183348.598218Z/: pandas-clean_imdb_reviews.html  pandas-raw_imdb_reviews.html
gx/data_docs/validations/data_quality_validation/__none__/20250513T074110.551865Z/: pandas-clean_imdb_reviews.html  pandas-raw_imdb_reviews.html
gx/data_docs/validations/data_quality_validation/__none__/20250513T100258.334003Z/: pandas-clean_imdb_reviews.html  pandas-raw_imdb_reviews.html
gx/data_docs/validations/data_quality_validation/__none__/20250513T100344.588076Z/: pandas-clean_imdb_reviews.html  pandas-raw_imdb_reviews.html
gx/expectations/: .ge_store_backend_id  data_quality_validation.json
gx/validation_definitions/: clean_data_validator.json  raw_data_validator.json
models/: .gitignore
reports/tests/: tests-report.xml
src/: config.py
src/api/: api.py  schemas.py
src/modeling/: train.py
tests/: test_api.py  test_data.py  test_model.py
tests/aux_files/: long-review.txt
(+6 files in other folders)
