[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = ""
authors = [
  { name = "Santiago del Rey" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "datasets>=3.5.1",
    "dvc>=3.59.2",
    "evaluate>=0.4.3",
    "fastapi>=0.115.12",
    "great-expectations>=1.4.3",
    "huggingface-hub[hf-xet]>=0.30.2",
    "ipywidgets>=8.1.7",
    "mlflow>=2.22.0",
    "polars>=1.29.0",
    "python-dotenv",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    # Fix transformers version to a compatible one with mlflow
    "transformers[torch]<=4.51.2",
    "typer>=0.15.3",
    "uvicorn[standard]>=0.34.2",
    "loguru>=0.7.3",
    "numpy<2.0",
    "pydantic>=2.11.4",
    "psutil>=7.0.0",
    "pynvml>=12.0.0",
]
requires-python = ">3.10"


[tool.ruff]
line-length = 120
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    #Pylint
    "PL",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "deptry>=0.23.0",
    "ipykernel>=6.29.5",
    "pip>=25.1.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.8",
]
testing = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
]
